--- a/angular.json
+++ b/angular.json
@@ -60,12 +60,12 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "med-tel:build",
-            "baseHref": "https://jmbofly.github.io/med-tel/"
+            "browserTarget": "med-tel:build"
           },
           "configurations": {
             "production": {
-              "browserTarget": "med-tel:build:production"
+              "browserTarget": "med-tel:build:production",
+              "baseHref": "https://jmbofly.github.io/med-tel/"
             }
           }
         },
