added firebase functions and hosting

--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "firebase": "^5.10.0",
     "font-awesome": "^4.7.0",
     "jquery": "^3.4.0",
+    "ngx-animated-gradient": "^1.1.0",
     "ngx-owl-carousel-o": "^1.1.2",
     "ngx-parallax": "^4.0.0",
     "rxjs": "~6.3.3",
