--- a/package.json
+++ b/package.json
@@ -31,10 +31,13 @@
     "core-js": "^2.5.4",
     "firebase": "^5.10.0",
     "font-awesome": "^4.7.0",
+    "hover.css": "^2.3.2",
     "jquery": "^3.4.0",
+    "moment": "^2.24.0",
     "ngx-animated-gradient": "^1.1.0",
     "ngx-owl-carousel-o": "^1.1.2",
     "ngx-parallax": "^4.0.0",
+    "ngx-paypal": "^5.0.0",
     "rxjs": "~6.3.3",
     "tslib": "^1.9.0",
     "zone.js": "~0.8.26"
