--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "jquery": "^3.4.0",
     "moment": "^2.24.0",
     "ngx-animated-gradient": "^1.1.0",
+    "ngx-newsticker-albe": "^2.1.3",
     "ngx-owl-carousel-o": "^1.1.2",
     "ngx-parallax": "^4.0.0",
     "ngx-paypal": "^5.0.0",
