--- a/functions/package.json
+++ b/functions/package.json
@@ -14,17 +14,23 @@
   },
   "main": "lib/index.js",
   "dependencies": {
-    "cors": "^2.8.1",
     "@google-cloud/logging": "^0.7.1",
-    "stripe": "^4.15.0",
+    "cors": "^2.8.1",
+    "email-templates": "^6.0.0",
     "firebase-admin": "^8.0.0",
     "firebase-functions": "^3.0.0",
     "moment": "^2.17.1",
-    "nodemailer": "^6.2.1"
+    "nodemailer": "^6.2.1",
+    "nodemailer-smtp-transport": "^2.7.4",
+    "q": "^1.5.1",
+    "stripe": "^4.15.0"
   },
   "devDependencies": {
+    "@types/email-templates": "^6.0.0",
     "@types/firebase": "^3.2.1",
     "@types/nodemailer": "^6.2.0",
+    "@types/nodemailer-smtp-transport": "^2.7.4",
+    "@types/q": "^1.5.2",
     "tslint": "^5.12.0",
     "typescript": "^3.2.2"
   },
