--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@angular/platform-browser-dynamic": "~9.0.1",
     "@angular/router": "~9.0.1",
     "@ng-bootstrap/ng-bootstrap": "^5.3.0",
+    "@nomadreservations/ngx-stripe": "^1.2.2",
     "@sentry/browser": "^5.5.0",
     "@sentry/node": "^5.12.3",
     "angularfire2": "^5.4.2",
