--- a/angular.json
+++ b/angular.json
@@ -93,7 +93,8 @@
             "tsConfig": "src/tsconfig.spec.json",
             "karmaConfig": "src/karma.conf.js",
             "styles": [
-              "src/styles.scss"
+              "src/styles.scss",
+              "./node_modules/jqwidgets-ng/jqwidgets/styles/jqx.base.css"
             ],
             "scripts": [],
             "assets": [
