added covid chart

--- a/firebase.json
+++ b/firebase.json
@@ -10,7 +10,10 @@
     ]
   },
   "hosting": {
-    "rewrites": [],
+    "rewrites": [{
+        "source": "**",
+        "destination": "/index.html"
+      }],
     "public": "dist",
     "ignore": ["firebase.json", "**/.*", "**/node_modules/**"]
   },
