--- a/package.json
+++ b/package.json
@@ -23,7 +23,6 @@
     "@angular/platform-browser": "~9.0.1",
     "@angular/platform-browser-dynamic": "~9.0.1",
     "@angular/router": "~9.0.1",
-    "@ng-bootstrap/ng-bootstrap": "^5.3.0",
     "@sentry/browser": "^5.5.0",
     "@sentry/node": "^5.12.3",
     "angularfire2": "^5.4.2",
@@ -39,6 +38,7 @@
     "jquery": "^3.4.0",
     "moment": "^2.24.0",
     "ngx-animated-gradient": "^1.1.0",
+    "ngx-bootstrap": "^5.6.1",
     "ngx-cookie-service": "^2.2.0",
     "ngx-easy-table": "^12.0.0",
     "ngx-newsticker-albe": "^2.1.3",
